# anchor-metaplex-boilerplate

./: Anchor.toml
programs/metaplex-anchor-boilerplate/: Cargo.toml
programs/metaplex-anchor-boilerplate/src/: lib.rs
programs/metaplex-anchor-boilerplate/src/instructions/: mod.rs  transfer_nft.rs
tests/: metaplex-anchor-boilerplate.ts
